wrong direction of gizmo displays in the viewport for bones in the world space #72936

Closed
opened 2020-01-06 16:53:20 +01:00 by Stanislav Ovcharov · 18 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.79-2.82 (sub 6), branch: master, commit date: 2020-01-05 17:27, hash: e993667a46

Short description of error
See example file - ttt.gif Bone.001 does not inherit rotation. so if rotation order set as e.g. XYZ when you rotate X-axis your Y-axis and its Gizmo should keep its vertical direction even when you rotate root bone but it does not. Gizmo on the bone.001 inherit direction of the root bone which seems to be wrong . Meanwhile in graph editor X rotation f-curve of Bone.001 is straight as it should to be.

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.79-2.82 (sub 6), branch: master, commit date: 2020-01-05 17:27, hash: `e993667a46` **Short description of error** See example file - ![ttt.gif](https://archive.blender.org/developer/F8262474/ttt.gif) Bone.001 does not inherit rotation. so if rotation order set as e.g. XYZ when you rotate X-axis your Y-axis and its Gizmo should keep its vertical direction even when you rotate root bone but it does not. Gizmo on the bone.001 inherit direction of the root bone which seems to be wrong . Meanwhile in graph editor X rotation f-curve of Bone.001 is straight as it should to be.

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov
Stanislav Ovcharov changed title from wrong direction of bone displays in the viewport to wrong direction of gizmo displays in the viewport for bones in the world space 2020-01-07 08:12:59 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Can you post a demo blend file for testing?

Can you post a demo blend file for testing?

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I could not immediately reproduce this, also with Inherent Rotation turned off:

Screenshot 2020-01-07 at 22.22.21.png

If you have a more specific setup you are welcome to post a blend file.

I could not immediately reproduce this, also with Inherent Rotation turned off: ![Screenshot 2020-01-07 at 22.22.21.png](https://archive.blender.org/developer/F8264858/Screenshot_2020-01-07_at_22.22.21.png) If you have a more specific setup you are welcome to post a blend file.

@WilliamReynish Sure. here it is #72936.blend Probably your transform orientation was not Gimbal. Here is another gif - #72936.gif

@WilliamReynish Sure. here it is [#72936.blend](https://archive.blender.org/developer/F8265585/T72936.blend) Probably your transform orientation was not Gimbal. Here is another gif - ![#72936.gif](https://archive.blender.org/developer/F8265587/T72936.gif)

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

With @StanislavOvcharov's file, it doesn't matter which transform orientation is chosen (at least it doesn't matter on my machine), they all show the gizmo in the same (incorrect) orientation.

Adding the #user_interface project to get some help with the gizmos.

With @StanislavOvcharov's file, it doesn't matter which transform orientation is chosen (at least it doesn't matter on my machine), they all show the gizmo in the same (incorrect) orientation. Adding the #user_interface project to get some help with the gizmos.
Campbell Barton was assigned by Sybren A. Stüvel 2020-01-13 17:40:10 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 can you determine whether this is by design or whether this is a bug?

@ideasman42 can you determine whether this is by design or whether this is a bug?

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was unassigned by Dalai Felinto 2020-05-27 16:32:55 +02:00

No point in assigning to someone if the person may not fix it (it may not be a bug).

No point in assigning to someone if the person may not fix it (it may not be a bug).

Didn't get it, If person may not fix it, shouldn't it be commented here?

Didn't get it, If person may not fix it, shouldn't it be commented here?

@StanislavOvcharov: Campbell was "assigned" to look at it, but assigning should be used only when the person will actually fix the issue. This is what I changed.

@StanislavOvcharov: Campbell was "assigned" to look at it, but assigning should be used only when the person will actually fix the issue. This is what I changed.

This issue was referenced by 0a8eeae831

This issue was referenced by 0a8eeae831cbdd2ec80f3741e56bafe27ac6feaa

This issue was referenced by c23b1de2cf

This issue was referenced by c23b1de2cf8ad13f102d2d5484d09e280b36dda4

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-09 14:38:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72936
No description provided.