Fix T72936: Incorrect gizmo orientation with inherit rotation disabled